include/codata_constants_2018.h

ADD_IMPORT extern const double ATOMIC_UNIT_OF_CHARGE_DENSITY_2018;/**< C m^-3 */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_CHARGE_DENSITY_2018;/**< C m^-3 */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_CURRENT_2018;/**< A */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_CURRENT_2018;/**< A */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_ELECTRIC_DIPOLE_MOM_2018;/**< C m */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_ELECTRIC_DIPOLE_MOM_2018;/**< C m */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_ELECTRIC_FIELD_2018;/**< V m^-1 */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_ELECTRIC_FIELD_2018;/**< V m^-1 */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_ELECTRIC_FIELD_GRADIENT_2018;/**< V m^-2 */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_ELECTRIC_FIELD_GRADIENT_2018;/**< V m^-2 */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_ELECTRIC_POLARIZABILITY_2018;/**< C^2 m^2 J^-1 */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_ELECTRIC_POLARIZABILITY_2018;/**< C^2 m^2 J^-1 */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_ELECTRIC_POTENTIAL_2018;/**< V */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_ELECTRIC_POTENTIAL_2018;/**< V */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_ELECTRIC_QUADRUPOLE_MOM_2018;/**< C m^2 */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_ELECTRIC_QUADRUPOLE_MOM_2018;/**< C m^2 */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_ENERGY_2018;/**< J */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_ENERGY_2018;/**< J */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_FORCE_2018;/**< N */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_FORCE_2018;/**< N */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_LENGTH_2018;/**< m */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_LENGTH_2018;/**< m */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_MAG__DIPOLE_MOM_2018;/**< J T^-1 */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_MAG__DIPOLE_MOM_2018;/**< J T^-1 */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_MAG__FLUX_DENSITY_2018;/**< T */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_MAG__FLUX_DENSITY_2018;/**< T */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_MAGNETIZABILITY_2018;/**< J T^-2 */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_MAGNETIZABILITY_2018;/**< J T^-2 */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_MASS_2018;/**< kg */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_MASS_2018;/**< kg */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_MOMENTUM_2018;/**< kg m s^-1 */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_MOMENTUM_2018;/**< kg m s^-1 */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_PERMITTIVITY_2018;/**< F m^-1 */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_PERMITTIVITY_2018;/**< F m^-1 */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_TIME_2018;/**< s */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_TIME_2018;/**< s */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_VELOCITY_2018;/**< m s^-1 */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_VELOCITY_2018;/**< m s^-1 */
ADD_IMPORT extern const double AVOGADRO_CONSTANT_2018;/**< mol^-1 */
ADD_IMPORT extern const double U_AVOGADRO_CONSTANT_2018;/**< mol^-1 */
ADD_IMPORT extern const double BOHR_MAGNETON_2018;/**< J T^-1 */
ADD_IMPORT extern const double U_BOHR_MAGNETON_2018;/**< J T^-1 */
ADD_IMPORT extern const double BOHR_MAGNETON_IN_EV_T_2018;/**< eV T^-1 */
ADD_IMPORT extern const double U_BOHR_MAGNETON_IN_EV_T_2018;/**< eV T^-1 */
ADD_IMPORT extern const double BOHR_MAGNETON_IN_HZ_T_2018;/**< Hz T^-1 */
ADD_IMPORT extern const double U_BOHR_MAGNETON_IN_HZ_T_2018;/**< Hz T^-1 */
ADD_IMPORT extern const double BOHR_MAGNETON_IN_INVERSE_METER_PER_TESLA_2018;/**< m^-1 T^-1 */
ADD_IMPORT extern const double U_BOHR_MAGNETON_IN_INVERSE_METER_PER_TESLA_2018;/**< m^-1 T^-1 */
ADD_IMPORT extern const double BOHR_MAGNETON_IN_K_T_2018;/**< K T^-1 */
ADD_IMPORT extern const double U_BOHR_MAGNETON_IN_K_T_2018;/**< K T^-1 */
ADD_IMPORT extern const double BOHR_RADIUS_2018;/**< m */
ADD_IMPORT extern const double U_BOHR_RADIUS_2018;/**< m */
ADD_IMPORT extern const double BOLTZMANN_CONSTANT_2018;/**< J K^-1 */
ADD_IMPORT extern const double U_BOLTZMANN_CONSTANT_2018;/**< J K^-1 */