src/codata_constants_2018.f90


real(c_double), protected, public, bind(C,name="ATOMIC_UNIT_OF_CHARGE_DENSITY_2018"):: &
capi_024_2018=ATOMIC_UNIT_OF_CHARGE_DENSITY_2018
real(c_double), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_CHARGE_DENSITY_2018") :: &
capi_U_024_2018=U_ATOMIC_UNIT_OF_CHARGE_DENSITY_2018

real(real64), parameter, public :: ATOMIC_UNIT_OF_CURRENT_2018=6.623618237510d-3 !! A
real(real64), parameter, public :: U_ATOMIC_UNIT_OF_CURRENT_2018=0.000000000013d-3 !! A

real(c_double), protected, public, bind(C,name="ATOMIC_UNIT_OF_CURRENT_2018"):: &
capi_025_2018=ATOMIC_UNIT_OF_CURRENT_2018
real(c_double), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_CURRENT_2018") :: &
capi_U_025_2018=U_ATOMIC_UNIT_OF_CURRENT_2018

real(real64), parameter, public :: ATOMIC_UNIT_OF_ELECTRIC_DIPOLE_MOM_2018=8.4783536255d-30 !! C m
real(real64), parameter, public :: U_ATOMIC_UNIT_OF_ELECTRIC_DIPOLE_MOM_2018=0.0000000013d-30 !! C m

real(c_double), protected, public, bind(C,name="ATOMIC_UNIT_OF_ELECTRIC_DIPOLE_MOM_2018"):: &
capi_026_2018=ATOMIC_UNIT_OF_ELECTRIC_DIPOLE_MOM_2018
real(c_double), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_ELECTRIC_DIPOLE_MOM_2018") :: &
capi_U_026_2018=U_ATOMIC_UNIT_OF_ELECTRIC_DIPOLE_MOM_2018

real(real64), parameter, public :: ATOMIC_UNIT_OF_ELECTRIC_FIELD_2018=5.14220674763d11 !! V m^-1
real(real64), parameter, public :: U_ATOMIC_UNIT_OF_ELECTRIC_FIELD_2018=0.00000000078d11 !! V m^-1

real(c_double), protected, public, bind(C,name="ATOMIC_UNIT_OF_ELECTRIC_FIELD_2018"):: &
capi_027_2018=ATOMIC_UNIT_OF_ELECTRIC_FIELD_2018
real(c_double), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_ELECTRIC_FIELD_2018") :: &
capi_U_027_2018=U_ATOMIC_UNIT_OF_ELECTRIC_FIELD_2018

real(real64), parameter, public :: ATOMIC_UNIT_OF_ELECTRIC_FIELD_GRADIENT_2018=9.7173624292d21 !! V m^-2
real(real64), parameter, public :: U_ATOMIC_UNIT_OF_ELECTRIC_FIELD_GRADIENT_2018=0.0000000029d21 !! V m^-2

real(c_double), protected, public, bind(C,name="ATOMIC_UNIT_OF_ELECTRIC_FIELD_GRADIENT_2018"):: &
capi_028_2018=ATOMIC_UNIT_OF_ELECTRIC_FIELD_GRADIENT_2018
real(c_double), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_ELECTRIC_FIELD_GRADIENT_2018") :: &
capi_U_028_2018=U_ATOMIC_UNIT_OF_ELECTRIC_FIELD_GRADIENT_2018

real(real64), parameter, public :: ATOMIC_UNIT_OF_ELECTRIC_POLARIZABILITY_2018=1.64877727436d-41 !! C^2 m^2 J^-1
real(real64), parameter, public :: U_ATOMIC_UNIT_OF_ELECTRIC_POLARIZABILITY_2018=0.00000000050d-41 !! C^2 m^2 J^-1

real(c_double), protected, public, bind(C,name="ATOMIC_UNIT_OF_ELECTRIC_POLARIZABILITY_2018"):: &
capi_029_2018=ATOMIC_UNIT_OF_ELECTRIC_POLARIZABILITY_2018
real(c_double), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_ELECTRIC_POLARIZABILITY_2018") :: &
capi_U_029_2018=U_ATOMIC_UNIT_OF_ELECTRIC_POLARIZABILITY_2018

real(real64), parameter, public :: ATOMIC_UNIT_OF_ELECTRIC_POTENTIAL_2018=27.211386245988d0 !! V
real(real64), parameter, public :: U_ATOMIC_UNIT_OF_ELECTRIC_POTENTIAL_2018=0.000000000053d0 !! V

real(c_double), protected, public, bind(C,name="ATOMIC_UNIT_OF_ELECTRIC_POTENTIAL_2018"):: &
capi_030_2018=ATOMIC_UNIT_OF_ELECTRIC_POTENTIAL_2018
real(c_double), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_ELECTRIC_POTENTIAL_2018") :: &
capi_U_030_2018=U_ATOMIC_UNIT_OF_ELECTRIC_POTENTIAL_2018

real(real64), parameter, public :: ATOMIC_UNIT_OF_ELECTRIC_QUADRUPOLE_MOM_2018=4.4865515246d-40 !! C m^2
real(real64), parameter, public :: U_ATOMIC_UNIT_OF_ELECTRIC_QUADRUPOLE_MOM_2018=0.0000000014d-40 !! C m^2

real(c_double), protected, public, bind(C,name="ATOMIC_UNIT_OF_ELECTRIC_QUADRUPOLE_MOM_2018"):: &
capi_031_2018=ATOMIC_UNIT_OF_ELECTRIC_QUADRUPOLE_MOM_2018
real(c_double), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_ELECTRIC_QUADRUPOLE_MOM_2018") :: &
capi_U_031_2018=U_ATOMIC_UNIT_OF_ELECTRIC_QUADRUPOLE_MOM_2018

real(real64), parameter, public :: ATOMIC_UNIT_OF_ENERGY_2018=4.3597447222071d-18 !! J
real(real64), parameter, public :: U_ATOMIC_UNIT_OF_ENERGY_2018=0.0000000000085d-18 !! J

real(c_double), protected, public, bind(C,name="ATOMIC_UNIT_OF_ENERGY_2018"):: &
capi_032_2018=ATOMIC_UNIT_OF_ENERGY_2018
real(c_double), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_ENERGY_2018") :: &
capi_U_032_2018=U_ATOMIC_UNIT_OF_ENERGY_2018

real(real64), parameter, public :: ATOMIC_UNIT_OF_FORCE_2018=8.2387234983d-8 !! N
real(real64), parameter, public :: U_ATOMIC_UNIT_OF_FORCE_2018=0.0000000012d-8 !! N

real(c_double), protected, public, bind(C,name="ATOMIC_UNIT_OF_FORCE_2018"):: &
capi_033_2018=ATOMIC_UNIT_OF_FORCE_2018
real(c_double), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_FORCE_2018") :: &
capi_U_033_2018=U_ATOMIC_UNIT_OF_FORCE_2018

real(real64), parameter, public :: ATOMIC_UNIT_OF_LENGTH_2018=5.29177210903d-11 !! m
real(real64), parameter, public :: U_ATOMIC_UNIT_OF_LENGTH_2018=0.00000000080d-11 !! m

real(c_double), protected, public, bind(C,name="ATOMIC_UNIT_OF_LENGTH_2018"):: &
capi_034_2018=ATOMIC_UNIT_OF_LENGTH_2018
real(c_double), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_LENGTH_2018") :: &
capi_U_034_2018=U_ATOMIC_UNIT_OF_LENGTH_2018

real(real64), parameter, public :: ATOMIC_UNIT_OF_MAG__DIPOLE_MOM_2018=1.85480201566d-23 !! J T^-1
real(real64), parameter, public :: U_ATOMIC_UNIT_OF_MAG__DIPOLE_MOM_2018=0.00000000056d-23 !! J T^-1

real(c_double), protected, public, bind(C,name="ATOMIC_UNIT_OF_MAG__DIPOLE_MOM_2018"):: &
capi_035_2018=ATOMIC_UNIT_OF_MAG__DIPOLE_MOM_2018
real(c_double), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_MAG__DIPOLE_MOM_2018") :: &
capi_U_035_2018=U_ATOMIC_UNIT_OF_MAG__DIPOLE_MOM_2018

real(real64), parameter, public :: ATOMIC_UNIT_OF_MAG__FLUX_DENSITY_2018=2.35051756758d5 !! T
real(real64), parameter, public :: U_ATOMIC_UNIT_OF_MAG__FLUX_DENSITY_2018=0.00000000071d5 !! T

real(c_double), protected, public, bind(C,name="ATOMIC_UNIT_OF_MAG__FLUX_DENSITY_2018"):: &
capi_036_2018=ATOMIC_UNIT_OF_MAG__FLUX_DENSITY_2018
real(c_double), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_MAG__FLUX_DENSITY_2018") :: &
capi_U_036_2018=U_ATOMIC_UNIT_OF_MAG__FLUX_DENSITY_2018

real(real64), parameter, public :: ATOMIC_UNIT_OF_MAGNETIZABILITY_2018=7.8910366008d-29 !! J T^-2
real(real64), parameter, public :: U_ATOMIC_UNIT_OF_MAGNETIZABILITY_2018=0.0000000048d-29 !! J T^-2

real(c_double), protected, public, bind(C,name="ATOMIC_UNIT_OF_MAGNETIZABILITY_2018"):: &
capi_037_2018=ATOMIC_UNIT_OF_MAGNETIZABILITY_2018
real(c_double), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_MAGNETIZABILITY_2018") :: &
capi_U_037_2018=U_ATOMIC_UNIT_OF_MAGNETIZABILITY_2018

real(real64), parameter, public :: ATOMIC_UNIT_OF_MASS_2018=9.1093837015d-31 !! kg
real(real64), parameter, public :: U_ATOMIC_UNIT_OF_MASS_2018=0.0000000028d-31 !! kg

real(c_double), protected, public, bind(C,name="ATOMIC_UNIT_OF_MASS_2018"):: &
capi_038_2018=ATOMIC_UNIT_OF_MASS_2018
real(c_double), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_MASS_2018") :: &
capi_U_038_2018=U_ATOMIC_UNIT_OF_MASS_2018

real(real64), parameter, public :: ATOMIC_UNIT_OF_MOMENTUM_2018=1.99285191410d-24 !! kg m s^-1
real(real64), parameter, public :: U_ATOMIC_UNIT_OF_MOMENTUM_2018=0.00000000030d-24 !! kg m s^-1

real(c_double), protected, public, bind(C,name="ATOMIC_UNIT_OF_MOMENTUM_2018"):: &
capi_039_2018=ATOMIC_UNIT_OF_MOMENTUM_2018
real(c_double), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_MOMENTUM_2018") :: &
capi_U_039_2018=U_ATOMIC_UNIT_OF_MOMENTUM_2018

real(real64), parameter, public :: ATOMIC_UNIT_OF_PERMITTIVITY_2018=1.11265005545d-10 !! F m^-1
real(real64), parameter, public :: U_ATOMIC_UNIT_OF_PERMITTIVITY_2018=0.00000000017d-10 !! F m^-1

real(c_double), protected, public, bind(C,name="ATOMIC_UNIT_OF_PERMITTIVITY_2018"):: &
capi_040_2018=ATOMIC_UNIT_OF_PERMITTIVITY_2018
real(c_double), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_PERMITTIVITY_2018") :: &
capi_U_040_2018=U_ATOMIC_UNIT_OF_PERMITTIVITY_2018

real(real64), parameter, public :: ATOMIC_UNIT_OF_TIME_2018=2.4188843265857d-17 !! s
real(real64), parameter, public :: U_ATOMIC_UNIT_OF_TIME_2018=0.0000000000047d-17 !! s

real(c_double), protected, public, bind(C,name="ATOMIC_UNIT_OF_TIME_2018"):: &
capi_041_2018=ATOMIC_UNIT_OF_TIME_2018
real(c_double), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_TIME_2018") :: &
capi_U_041_2018=U_ATOMIC_UNIT_OF_TIME_2018

real(real64), parameter, public :: ATOMIC_UNIT_OF_VELOCITY_2018=2.18769126364d6 !! m s^-1
real(real64), parameter, public :: U_ATOMIC_UNIT_OF_VELOCITY_2018=0.00000000033d6 !! m s^-1

real(c_double), protected, public, bind(C,name="ATOMIC_UNIT_OF_VELOCITY_2018"):: &
capi_042_2018=ATOMIC_UNIT_OF_VELOCITY_2018
real(c_double), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_VELOCITY_2018") :: &
capi_U_042_2018=U_ATOMIC_UNIT_OF_VELOCITY_2018

real(real64), parameter, public :: AVOGADRO_CONSTANT_2018=6.02214076d23 !! mol^-1
real(real64), parameter, public :: U_AVOGADRO_CONSTANT_2018=0.0d0 !! mol^-1

real(c_double), protected, public, bind(C,name="AVOGADRO_CONSTANT_2018"):: &
capi_043_2018=AVOGADRO_CONSTANT_2018
real(c_double), protected, public, bind(C,name="U_AVOGADRO_CONSTANT_2018") :: &
capi_U_043_2018=U_AVOGADRO_CONSTANT_2018

real(real64), parameter, public :: BOHR_MAGNETON_2018=9.2740100783d-24 !! J T^-1
real(real64), parameter, public :: U_BOHR_MAGNETON_2018=0.0000000028d-24 !! J T^-1

real(c_double), protected, public, bind(C,name="BOHR_MAGNETON_2018"):: &
capi_044_2018=BOHR_MAGNETON_2018
real(c_double), protected, public, bind(C,name="U_BOHR_MAGNETON_2018") :: &
capi_U_044_2018=U_BOHR_MAGNETON_2018

real(real64), parameter, public :: BOHR_MAGNETON_IN_EV_T_2018=5.7883818060d-5 !! eV T^-1
real(real64), parameter, public :: U_BOHR_MAGNETON_IN_EV_T_2018=0.0000000017d-5 !! eV T^-1

real(c_double), protected, public, bind(C,name="BOHR_MAGNETON_IN_EV_T_2018"):: &
capi_045_2018=BOHR_MAGNETON_IN_EV_T_2018
real(c_double), protected, public, bind(C,name="U_BOHR_MAGNETON_IN_EV_T_2018") :: &
capi_U_045_2018=U_BOHR_MAGNETON_IN_EV_T_2018

real(real64), parameter, public :: BOHR_MAGNETON_IN_HZ_T_2018=1.39962449361d10 !! Hz T^-1
real(real64), parameter, public :: U_BOHR_MAGNETON_IN_HZ_T_2018=0.00000000042d10 !! Hz T^-1

real(c_double), protected, public, bind(C,name="BOHR_MAGNETON_IN_HZ_T_2018"):: &
capi_046_2018=BOHR_MAGNETON_IN_HZ_T_2018
real(c_double), protected, public, bind(C,name="U_BOHR_MAGNETON_IN_HZ_T_2018") :: &
capi_U_046_2018=U_BOHR_MAGNETON_IN_HZ_T_2018

real(real64), parameter, public :: BOHR_MAGNETON_IN_INVERSE_METER_PER_TESLA_2018=46.686447783d0 !! m^-1 T^-1
real(real64), parameter, public :: U_BOHR_MAGNETON_IN_INVERSE_METER_PER_TESLA_2018=0.000000014d0 !! m^-1 T^-1

real(c_double), protected, public, bind(C,name="BOHR_MAGNETON_IN_INVERSE_METER_PER_TESLA_2018"):: &
capi_047_2018=BOHR_MAGNETON_IN_INVERSE_METER_PER_TESLA_2018
real(c_double), protected, public, bind(C,name="U_BOHR_MAGNETON_IN_INVERSE_METER_PER_TESLA_2018") :: &
capi_U_047_2018=U_BOHR_MAGNETON_IN_INVERSE_METER_PER_TESLA_2018

real(real64), parameter, public :: BOHR_MAGNETON_IN_K_T_2018=0.67171381563d0 !! K T^-1
real(real64), parameter, public :: U_BOHR_MAGNETON_IN_K_T_2018=0.00000000020d0 !! K T^-1

real(c_double), protected, public, bind(C,name="BOHR_MAGNETON_IN_K_T_2018"):: &
capi_048_2018=BOHR_MAGNETON_IN_K_T_2018
real(c_double), protected, public, bind(C,name="U_BOHR_MAGNETON_IN_K_T_2018") :: &
capi_U_048_2018=U_BOHR_MAGNETON_IN_K_T_2018

real(real64), parameter, public :: BOHR_RADIUS_2018=5.29177210903d-11 !! m
real(real64), parameter, public :: U_BOHR_RADIUS_2018=0.00000000080d-11 !! m

real(c_double), protected, public, bind(C,name="BOHR_RADIUS_2018"):: &
capi_049_2018=BOHR_RADIUS_2018
real(c_double), protected, public, bind(C,name="U_BOHR_RADIUS_2018") :: &
capi_U_049_2018=U_BOHR_RADIUS_2018

real(real64), parameter, public :: BOLTZMANN_CONSTANT_2018=1.380649d-23 !! J K^-1
real(real64), parameter, public :: U_BOLTZMANN_CONSTANT_2018=0.0d0 !! J K^-1
